# unitmail

./: .flake8  .gitignore  CLAUDE.md  README.md  playwright.config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.agents/: CURRENT_STATE.md  gui_updates_2026-01-12.md
.claude/agents/: README.md  change-coordinator.md  ci-cd-specialist.md  db-email-integrator.md  email-client-expert.md  email-ui-expert.md  gateway-specialist.md  implementation-roadmap.md  performance-engineer.md  security-auditor.md  test-automation.md  ui-fix-status.md  user-simulation.md
.claude/commands/: orchestrate.md
config/: jwt.example.toml  settings.example.toml  unitmail-gateway.service
database/migrations/: 000_migrations_table.sql  001_initial_schema.sql  002_indexes.sql  003_rls_policies.sql  004_functions.sql
database/seeds/: 001_test_data.sql
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COST_CONTROL_MATRIX.md  DATABASE_POSTGRESQL.md  DEVELOPMENT_METHODOLOGY.md  INSTALLATION.md  PORT_25_BRIDGE_WORKAROUND.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  TECHNICAL_SPECIFICATION.md  USER_GUIDE.md
packaging/appimage/: AppRun  build.sh  unitmail.desktop
packaging/deb/: build.sh
packaging/deb/debian/: changelog  control  copyright  rules
packaging/rpm/: build.sh
scripts/: backup.py  build-packages.sh  init_email_db.py  install-service.sh  migrate.py  queue_worker.py  run_client.py  run_gateway.py
skills/: 001_project_structure.md  002_python_project_init.md  003_supabase_schema.md  004_supabase_client.md  005_migrations_system.md  006_gateway_service.md  007_smtp_modules.md  008_rest_api.md  009_gtk_client.md  010_testing_crypto.md  011_packaging_docs.md  012_gui_theming.md  013_context_menus.md  014_folder_views.md
src/client/services/: __init__.py  backup_service.py  date_format_service.py  email_db.py  export_service.py  search_service.py  settings_service.py  setup_service.py
src/client/ui/: __init__.py  application.py  backup_dialog.py  column_resize_mixin.py  composer.py  contacts.py  export_dialog.py  folder_creation_dialog.py  folders.py  main_window.py  reader.py  restore_dialog.py  search.py  settings.py  setup_wizard.py  styles.css  view_theme.py
src/common/: __init__.py  config.py  database.py  exceptions.py  local_storage.py  migrations.py  models.py  sample_data.py
src/common/storage/: __init__.py  connection.py  migrations.py  schema.py  storage.py
src/gateway/: __init__.py  app.py  config.py
src/gateway/api/: __init__.py  auth.py  (+3 more)
src/unitmail/: __init__.py  __main__.py  __version__.py  cli.py  client  common  gateway
tests/: TEST_REPORT.md  conftest.py  test_gui_features.py  test_implemented_features.py  test_message_management.py  test_runtime_features.py
tests/e2e/: __init__.py  conftest.py  test_auth.py  test_compose.py  test_contacts.py  test_inbox.py
(+34 files in other folders)
